<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">Download %1$s %2$s</string>
    <string name="notification_button">Check status</string>

    <string name="button_loading_text">We are downloading</string>
    <string name="button_default_text">Download</string>

    <string name="download_channel_description">Download channel</string>
    <string name="download_channel_name">Download channel</string>

    <string name="no_selection_message">Please select the file or provide a valid URL to download.</string>
    <string name="url_not_valid_message">The provided URL is not valid, please try again.</string>

    <string name="header_image_content_description">Download image header</string>
    <string name="file_name_custom">Custom file</string>
    <string name="file_name_glide">Glide - Image loading Library by Bump Tech</string>
    <string name="file_name_udacity">LoadApp - Current repository by Udacity</string>
    <string name="file_name_retrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>

    <string name="choose_repository_label">Choose one of the following repositories</string>
    <string name="custom_url_label">Or provide a custom URL</string>
    <string name="custom_url_hint">https://example.com…</string>


    <string name="title_activity_detail">Detail</string>

    <string name="file_name_label">File name:</string>
    <string name="status_label">Status:</string>

    <string name="status_succeed">Succeed</string>
    <string name="status_failed">Failed</string>

    <string name="ok">OK</string>
</resources>
